# RAG-based-agent

./: .env  .env.example  .gitignore  README.md  concurrency_demo.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/1762812f-0bb9-4480-8f6e-ec1d3ee4b936/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/ee8355e5-02ac-46a9-a84b-4997afb6a0fe/: mutable_id_tracker.mappings
scripts/: watch-inngest.ps1
